color meu toggle blanco

--- a/styles.css
+++ b/styles.css
@@ -696,7 +696,7 @@ header h1 {
   display: none;
   font-size: 28px;
   cursor: pointer;
-  color: gold;
+  color: rgb(255, 255, 255);
   background: none;
   border: none;
 }
