se agrega lineas al css

--- a/styles.css
+++ b/styles.css
@@ -1020,3 +1020,11 @@ footer {
     visibility: visible;
   }
 }
+/* FORZAR ORDEN CORRECTO DEL MENÚ Y OVERLAY */
+nav {
+  z-index: 10010 !important;
+}
+
+#overlayMenu {
+  z-index: 10000 !important;
+}
